--- a/WindowsYaraService/WindowsYaraService.csproj
+++ b/WindowsYaraService/WindowsYaraService.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -58,13 +59,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\BaseObservable.cs" />
+    <Compile Include="Base\JobFactory.cs" />
+    <Compile Include="Base\Jobs\Job.cs" />
+    <Compile Include="Base\Jobs\ScheduleJob.cs" />
+    <Compile Include="Modules\Detector.cs" />
+    <Compile Include="Modules\Scheduler.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
-    <Compile Include="YaraScanner.cs" />
+    <Compile Include="Modules\Scanner.cs" />
     <Compile Include="YaraService.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -86,6 +93,7 @@
       <DependentUpon>YaraService.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\YaraSharp.1.3.1\build\net\YaraSharp.targets" Condition="Exists('..\packages\YaraSharp.1.3.1\build\net\YaraSharp.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
