--- a/WindowsYaraService/WindowsYaraService.csproj
+++ b/WindowsYaraService/WindowsYaraService.csproj
@@ -61,7 +61,10 @@
   <ItemGroup>
     <Compile Include="Base\BaseObservable.cs" />
     <Compile Include="Base\JobFactory.cs" />
-    <Compile Include="Base\Jobs\Job.cs" />
+    <Compile Include="Base\Jobs\common\BaseObservableJob.cs" />
+    <Compile Include="Base\Jobs\common\Job.cs" />
+    <Compile Include="Base\Jobs\common\ObservableJob.cs" />
+    <Compile Include="Base\Jobs\ScanJob.cs" />
     <Compile Include="Base\Jobs\ScheduleJob.cs" />
     <Compile Include="Modules\Detector.cs" />
     <Compile Include="Modules\Scheduler.cs" />
