--- a/WindowsYaraService/WindowsYaraService.csproj
+++ b/WindowsYaraService/WindowsYaraService.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Base\Jobs\ScheduleJob.cs" />
     <Compile Include="Modules\Detector.cs" />
     <Compile Include="Modules\Scanner\Models\InfoModel.cs" />
+    <Compile Include="Modules\Scanner\Models\Scan.cs" />
     <Compile Include="Modules\Scanner\Models\YaraResult.cs" />
     <Compile Include="Modules\Scanner\ScanManager.cs" />
     <Compile Include="Modules\Scheduler.cs" />
