--- a/WindowsYaraService/WindowsYaraService.csproj
+++ b/WindowsYaraService/WindowsYaraService.csproj
@@ -70,10 +70,17 @@
     <Compile Include="Base\FetchSignal.cs" />
     <Compile Include="Base\Jobs\common\BaseObservableJob.cs" />
     <Compile Include="Base\Jobs\common\Job.cs" />
+    <Compile Include="Base\Jobs\common\NetJob.cs" />
     <Compile Include="Base\Jobs\common\ObservableJob.cs" />
+    <Compile Include="Base\Jobs\JobType.cs" />
+    <Compile Include="Base\Jobs\NetScanJob.cs" />
     <Compile Include="Base\Jobs\ScanJob.cs" />
     <Compile Include="Base\Jobs\ScheduleJob.cs" />
     <Compile Include="Modules\Detector.cs" />
+    <Compile Include="Modules\Network\CookieRequestInterceptor.cs" />
+    <Compile Include="Modules\Network\HttpClientSingleton.cs" />
+    <Compile Include="Modules\Network\Models\StandardRequest.cs" />
+    <Compile Include="Modules\Network\Networking.cs" />
     <Compile Include="Modules\Scanner\Models\InfoModel.cs" />
     <Compile Include="Modules\Scanner\Models\Message.cs" />
     <Compile Include="Modules\Scanner\Models\MessageType.cs" />
