--- a/WindowsYaraService/WindowsYaraService.csproj
+++ b/WindowsYaraService/WindowsYaraService.csproj
@@ -42,6 +42,7 @@
     <Reference Include="AlphaFS, Version=2.2.0.0, Culture=neutral, PublicKeyToken=4d31a58f7d7ad5c9, processorArchitecture=MSIL">
       <HintPath>..\packages\AlphaFS.2.2.6\lib\net452\AlphaFS.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -49,6 +50,7 @@
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -67,25 +69,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\BaseObservable.cs" />
+    <Compile Include="Base\Common\DataProtection.cs" />
     <Compile Include="Base\FetchSignal.cs" />
     <Compile Include="Base\Jobs\common\BaseObservableJob.cs" />
+    <Compile Include="Base\Common\BytesConverter.cs" />
     <Compile Include="Base\Jobs\common\Job.cs" />
     <Compile Include="Base\Jobs\common\NetJob.cs" />
     <Compile Include="Base\Jobs\common\ObservableJob.cs" />
     <Compile Include="Base\Jobs\JobType.cs" />
+    <Compile Include="Base\Jobs\NetRegisterJob.cs" />
     <Compile Include="Base\Jobs\NetScanJob.cs" />
     <Compile Include="Base\Jobs\ScanJob.cs" />
     <Compile Include="Base\Jobs\ScheduleJob.cs" />
     <Compile Include="Modules\Detector.cs" />
     <Compile Include="Modules\Network\CookieRequestInterceptor.cs" />
     <Compile Include="Modules\Network\HttpClientSingleton.cs" />
+    <Compile Include="Modules\Network\Models\RegisterResponse.cs" />
     <Compile Include="Modules\Network\Models\StandardRequest.cs" />
     <Compile Include="Modules\Network\Networking.cs" />
-    <Compile Include="Modules\Scanner\Models\InfoModel.cs" />
-    <Compile Include="Modules\Scanner\Models\Message.cs" />
-    <Compile Include="Modules\Scanner\Models\MessageType.cs" />
-    <Compile Include="Modules\Scanner\Models\Scan.cs" />
-    <Compile Include="Modules\Scanner\Models\YaraResult.cs" />
+    <Compile Include="Modules\Network\Models\Scan\InfoModel.cs" />
+    <Compile Include="Modules\Network\Models\Scan\Message.cs" />
+    <Compile Include="Modules\Network\Models\Scan\MessageType.cs" />
+    <Compile Include="Modules\Network\Models\Scan\Scan.cs" />
+    <Compile Include="Modules\Network\Models\Scan\YaraResult.cs" />
+    <Compile Include="Modules\Network\Models\RegisterModel.cs" />
     <Compile Include="Modules\Scanner\ScanManager.cs" />
     <Compile Include="Modules\Scheduler.cs" />
     <Compile Include="Modules\Scanner\VirusTotalScanner.cs" />
