--- a/WindowsYaraService/WindowsYaraService.csproj
+++ b/WindowsYaraService/WindowsYaraService.csproj
@@ -46,6 +46,9 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Python.Runtime, Version=2.3.0.0, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\pythonnet_py35_dotnet.2.3.0\lib\net40\x86\Python.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
@@ -96,6 +99,7 @@
     <Compile Include="Modules\Scanner\ScanManager.cs" />
     <Compile Include="Modules\Scheduler.cs" />
     <Compile Include="Modules\Scanner\VirusTotalScanner.cs" />
+    <Compile Include="Modules\Update\Update.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -124,7 +128,9 @@
       <DependentUpon>YaraService.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Modules\Update\Scrapper\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\YaraSharp.1.3.1\build\net\YaraSharp.targets" Condition="Exists('..\packages\YaraSharp.1.3.1\build\net\YaraSharp.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
