--- a/WindowsYaraService/WindowsYaraService.csproj
+++ b/WindowsYaraService/WindowsYaraService.csproj
@@ -118,6 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Modules\Update\start_scrapper.bat" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
