--- a/WindowsYaraService/packages.config
+++ b/WindowsYaraService/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AlphaFS" version="2.2.6" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="pythonnet_py35_dotnet" version="2.3.0" targetFramework="net472" />
   <package id="VirusTotalNet" version="2.0.0" targetFramework="net472" />
