Enroll Working. Transfer Reports

--- a/WindowsYaraService/WindowsYaraService.csproj
+++ b/WindowsYaraService/WindowsYaraService.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
@@ -77,37 +78,27 @@
     <Compile Include="Base\BaseObservable.cs" />
     <Compile Include="Base\Common\DataProtection.cs" />
     <Compile Include="Base\Common\FileHandler.cs" />
+    <Compile Include="Base\Common\HashHandler.cs" />
     <Compile Include="Base\FetchSignal.cs" />
     <Compile Include="Base\Jobs\common\BaseObservableJob.cs" />
     <Compile Include="Base\Common\BytesConverter.cs" />
-    <Compile Include="Base\Jobs\common\INetworkListener.cs" />
     <Compile Include="Base\Jobs\common\InternalJob.cs" />
     <Compile Include="Base\Jobs\common\INetJob.cs" />
     <Compile Include="Base\Jobs\common\ObservableJob.cs" />
-    <Compile Include="Base\Jobs\JobType.cs" />
     <Compile Include="Base\Jobs\NetJobs\EnrollmentJob.cs" />
-    <Compile Include="Base\Jobs\NetJobs\InterogateEnrollJob.cs" />
     <Compile Include="Base\Jobs\NetJobs\NetScanJob.cs" />
     <Compile Include="Base\Jobs\InternalJobs\ScanJob.cs" />
-    <Compile Include="Base\Jobs\NetJobs\PrimalCertJob.cs" />
-    <Compile Include="Base\Jobs\NetJobs\TokenJob.cs" />
-    <Compile Include="Base\Jobs\ScheduleJob.cs" />
+    <Compile Include="Base\Jobs\InternalJobs\ScheduleJob.cs" />
     <Compile Include="Modules\Detector.cs" />
-    <Compile Include="Modules\Network\CookieRequestInterceptor.cs" />
     <Compile Include="Modules\Network\HttpClientSingleton.cs" />
-    <Compile Include="Modules\Network\Models\Register\RegisterResponse.cs" />
-    <Compile Include="Modules\Network\Models\Register\RegisterTypes.cs" />
-    <Compile Include="Modules\Network\NetworkCodes.cs" />
     <Compile Include="Modules\Network\Networking.cs" />
     <Compile Include="Modules\Network\Models\Scan\InfoModel.cs" />
     <Compile Include="Modules\Network\Models\Scan\Message.cs" />
-    <Compile Include="Modules\Network\Models\Scan\MessageType.cs" />
+    <Compile Include="Modules\Network\Models\Scan\Tag.cs" />
     <Compile Include="Modules\Network\Models\Scan\Scan.cs" />
     <Compile Include="Modules\Network\Models\Scan\YaraResult.cs" />
     <Compile Include="Modules\Network\Models\Register\EnrollmentModel.cs" />
-    <Compile Include="Modules\Network\StandardResponse.cs" />
-    <Compile Include="Modules\Registrator\CertHandler.cs" />
-    <Compile Include="Modules\Registrator\Registrator.cs" />
+    <Compile Include="Base\Common\CertHandler.cs" />
     <Compile Include="Modules\Scanner\ScanManager.cs" />
     <Compile Include="Modules\Scheduler.cs" />
     <Compile Include="Modules\Scanner\VirusTotalScanner.cs" />
